# munitquest-data-submission

./: .gitignore  README.md  pytest.ini
.github/workflows/: run_pytestsuite.yml
app/output/: scores.json
bundle/: competition.yaml
bundle/pages/: data.md  evaluation.md  organizers.md  overview.md  submission.md  terms.md
bundle/scoring/: config.json  data_validation.ipynb  data_validation.py  execute.sh  main.py  metadata  pyproject.toml  report.py
bundle/scoring/src/scoring/: base.py  bids_validation.py  custom_validation.py  data_validation.py  report.py
tests/Avrillon/sub-01/emg/: sub-01_task-isometric10percentmvc_run-01_events.tsv  sub-01_task-isometric30percentmvc_run-01_events.tsv  sub-01_task-isometric50percentmvc_run-01_events.tsv  sub-01_task-isometric70percentmvc_run-01_events.tsv
tests/Avrillon/sub-02/emg/: sub-02_task-isometric80percentmvc_run-01_events.tsv
tests/Avrillon/sub-05/emg/: sub-05_electrodes.tsv  (+6 more)
tests/CailletNoEthicsApproval/: README.md  dataset_description.json  participants.tsv
tests/CailletSomeElectrodeTSVAndCoordJsonMissing/: dataset_description.json  events.json
tests/CailletSomeEventsTSVMissing/: events.json
tests/integration/: test_main.py
tests/testdata/: validation_config.json
tests/testdata/Avrillon/: README.md  participants.tsv
tests/testdata/CailletSomeElectrodeTSVMissing/: participants.json
tests/testdata/sidecars/: invalid_cede.json  invalid_cede_type.json  invalid_fsamp_preamp.json  valid.json
tests/unit/: test_bids_validation.py  test_custom_validation.py  test_report.py  test_validation.py
(+191 files in other folders)
