[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scoring"
version = "0.1.0"
description = "Scoring and validation framework for competition submissions"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

addopts = [
    "-ra",
    "--strict-markers"
]

markers = [
    "unit: isolated unit tests",
    "integration: full pipeline tests",
]